Adjusted layout issues

--- a/pizza-app-client/src/App.css
+++ b/pizza-app-client/src/App.css
@@ -61,15 +61,14 @@ html, body, div#root, .App {
   height: 200px;
   width: 250px;
   cursor: pointer;
-  display: flex;
+  display: inline-flex;
   flex-direction: column;
-  float: left;
 }
 
 .cardOptionImage {
   flex: 1;
   background-position: center;
-  background-color: #757fb8;
+  background-color: #505050;
   background-repeat: no-repeat;
   background-size: cover;
 }
@@ -95,7 +94,7 @@ html, body, div#root, .App {
 }
 
 .cardSelected {
-  box-shadow: 0px 0px 10px 5px #3f51b5 !important;
+  box-shadow: 0px 0px 10px 5px #1c286b !important;
 }
 
 .orderPage {
@@ -108,6 +107,7 @@ html, body, div#root, .App {
   display: flex;
   flex-direction: column;
   overflow-Y: auto;
+  padding: 10px;
 }
 
 .pageTitle {
